--- a/jewellery-frontend/package.json
+++ b/jewellery-frontend/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.3",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
